# order_subscription_service

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
bot/: Dockerfile  bot.py  requirements.txt
src/apps/products/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
src/apps/products/migrations/: 0001_initial.py  0002_productitem.py  0003_alter_productitem_price.py
src/apps/subscriptions/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/apps/subscriptions/migrations/: 0001_initial.py  0002_alter_usersubscription_user.py  0003_subscriptionplan.py  0004_alter_usersubscription_subscribe_type.py  0005_remove_subscriptionplan_title.py  0006_auto_20251111_1006.py
src/apps/users/: views.py
src/apps/users/migrations/: 0001_initial.py  0002_customuser_telegram_id.py  0003_auto_20250817_0825.py
src/core/: celery.py  settings.py  test_runner.py  urls.py
tests/api/: test_orders.py  test_products.py  test_subscriptions.py  test_user_subscription.py
